add following class yo buttons

--- a/app/styles/buttons.styl
+++ b/app/styles/buttons.styl
@@ -71,6 +71,9 @@
 	color #666
 	letter-spacing 2px
 	cursor pointer
+	&.following
+		color #aaa
+		font-weight 500
 
 .am-View-button
 	background #2e71f0
