--- a/app/views/user/index.html
+++ b/app/views/user/index.html
@@ -11,7 +11,7 @@
 					<div>
 						<p class="name">{{profile.firstname}}</p>
 						<p class="city">{{profile.city}}, {{profile.country}}</p>
-						<button class="am-Follow-button">Seguir</button>
+						<button class="am-Follow-button">+ Seguir</button>
 					</div>
 				</div>
 			</div>
