--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -1,6 +1,5 @@
 {% extends '../../partials/base.html' %}
 
-
 {% block elements %}
 <div class="am-upload-work">
 	<div class="am-upload-work-box grid-container">
@@ -10,7 +9,15 @@
 				<div class="separator">
 					<span class="line"></span><span class="text">IMAGEN DE LA OBRA</span><span class="line"></span>
 				</div>
-				<button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
+				<div style="position:relative;">
+					<button class="button upload u-margin-top-30 upload_button">BUSCAR ARCHIVO</button>
+					{{cloudinary.uploader.image_upload_tag('photo', { callback: cloudinary_cors, return_delete_token: true })}}
+				</div>
+				<div class="form_line">
+      <div class="form_controls">
+        <div class="preview"></div>
+      </div>
+    </div>
 				<div class="separator">
 					<span class="line"></span><span class="text">DATOS DE LA OBRA</span><span class="line"></span>
 				</div>
@@ -26,16 +33,6 @@
 					{% endfor %}
 				</select>
 			</div>
-			<div class="grid-50 mobile-grid-50">
-				<p class="title">Ancho</p>
-				<input name='width' class="input" type="text" placeholder="30"/>
-			</div>
-
-			<div class="grid-50 mobile-grid-50">
-				<p class="title">Alto</p>
-				<input name='height' class="input" type="text" placeholder="50"/>
-			</div>
-
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Tags de la obra</p>
 					<input name='tags' class="input tags" type="text"/>
@@ -57,20 +54,92 @@
 </div>
 {% endblock %}
 
+{{ cloudinary.config() }}
+
 {% block scripts %}
-	<script src="http://code.jquery.com/jquery-2.1.1.min.js" lang="text/javascript"></script>
-  <script src='/jquery.ui.widget.js' type='text/javascript'></script>
+	<script src='/jquery.tagsinput.js' type='text/javascript'></script>
+	<script src='/jquery.ui.widget.js' type='text/javascript'></script>
   <script src='/jquery.iframe-transport.js' type='text/javascript'></script>
   <script src='/jquery.fileupload.js' type='text/javascript'></script>
   <script src='/jquery.cloudinary.js' type='text/javascript'></script>
 	<script>
-		$(function() {
-				$('.add-work').submit(function(event) {
-					event.preventDefault();
-					console.log($(this).serializeArray());
-				});
-			$('.tags').tagsInput({width:'100%', height:'50px', defaultText:'+ Etiqueta'});
+
+	$(document).ready(function() {
+
+		var imagelel;
+		$('.tags').tagsInput({
+		   height:'50px',
+		   width:'100%',
+		   defaultText:'+ Etiqueta'
+		});
+		$('.add-work').submit(function(event){
+			event.preventDefault();
+			var formData = {
+					 photo              : imagelel,
+					 title             : $('input[name=title]').val(),
+					 categories    : [parseInt($('select[name=categoryId]').val(),10)],
+					 tags             : $('input[name=tags]').val().split(','),
+					 public:1
+			 };
+
+			 Utils.getData({
+				 url:DataApp.currentUser.url + '/work/create',
+				 data: {data:JSON.stringify(formData)}
+			 }).then(function(response){
+				 if(response.status === 200) {
+					 location.href = DataApp.currentUser.url
+				 }
+			 });
 		});
 
+		$.cloudinary.config({"api_key":"337494525976864","cloud_name":"hackdudes","private_cdn":false});
+
+	$(".cloudinary-fileupload")
+	.fileupload({
+		dropZone: "#direct_upload",
+		start: function (e) {
+			$(".status").text("Starting upload...");
+		},
+		progress: function (e, data) {
+			$(".status").text("Uploading... " + Math.round((data.loaded * 100.0) / data.total) + "%");
+		},
+		fail: function (e, data) {
+			$(".status").text("Upload failed");
+		}
+	})
+	.off("cloudinarydone").on("cloudinarydone", function (e, data) {
+		console.log(data.result);
+		imagelel = data.result.secure_url;
+		$(".status").text("");
+		var preview = $(".preview").html('');
+		$.cloudinary.image(data.result.public_id, {
+			format: data.result.format, width: 500, height: 400, crop: "fit"
+		}).appendTo(preview);
+
+		$('.upload_button').hide();
+		$('.cloudinary-fileupload').hide();
+		$('<a>').
+			addClass('delete_by_token').
+			attr({href: '#'}).
+			data({delete_token: data.result.delete_token}).
+			html('&times;').
+			appendTo(preview).
+			click(function(e) {
+			e.preventDefault();
+			$.cloudinary.delete_by_token($(this).data('delete_token')).done(function(){
+				$('.preview').html('');
+				$('#info').html('');
+				$("#photo_bytes").val('');
+				$('input[name="photo[image]"]').remove();
+
+
+						$('.upload_button').show();
+						$('.cloudinary-fileupload').show();
+			}).fail(function() {
+				$('.status').text("Cannot delete image");
+			});
+		});
+	});
+});
 	</script>
 {% endblock %}
