new design in upload work

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -985,6 +985,21 @@ body
 	background rgba(black, .6)
 	padding 100px 20px
 
+	.preview
+		padding 30px 0 10px 0
+		text-align center
+		position relative
+		a
+			position absolute
+			top 0
+			color #333
+			font-weight: bold;
+			font-size: 1.5em;
+
+	.tagsinput
+		border solid 1px #979797
+		border-radius 4px
+
 .am-upload-work-box
 	background white
 	max-width 580px !important
@@ -1017,7 +1032,8 @@ body
 		font-family 'Montserrat', sans-serif
 		padding 13px 15px
 		box-sizing border-box
-		color warm-grey
+		// color warm-grey
+		color #555
 		font-size 14px
 		background white
 
