--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -14,20 +14,21 @@
 					{{cloudinary.uploader.image_upload_tag('photo', { callback: cloudinary_cors, return_delete_token: true })}}
 				</div>
 				<div class="form_line">
-      <div class="form_controls">
-        <div class="preview"></div>
-      </div>
-    </div>
+	      	<div class="form_controls">
+	        	<div class="preview"></div>
+	      	</div>
+    		</div>
 				<div class="separator">
 					<span class="line"></span><span class="text">DATOS DE LA OBRA</span><span class="line"></span>
 				</div>
 				<p class="title">Título de la obra</p>
-				<input name='title' class="input" type="text" placeholder="Los pajaritos cantan"/>
+				<input name='title' class="input" type="text" placeholder="Ingrese el titulo"/>
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Categoría de la obra</p>
 				<select class="input select" name='categoryId'>
+					<option disabled selected style="color: #aaa;">Seleccione categoria</option>
 					{% for category in categories %}
 					<option value="{{category.id}}">{{category.name}}</option>
 					{% endfor %}
