add account view

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -879,13 +879,13 @@ body
 
 
 /*------------------------------------*
-	$ COMPLETE PROFILE
+	$ PROFILE
 *------------------------------------*/
-.am-complete-profile
+.am-profile
 	background #eee
 	padding 12px 20px 100px 20px
 
-.am-complete-profile-box
+.am-profile-box
 	background white
 	border solid 1px #979797
 	max-width 580px !important
@@ -907,7 +907,8 @@ body
 		font-family 'Montserrat', sans-serif
 		padding 13px 15px
 		box-sizing border-box
-		color warm-grey
+		// color warm-grey
+		color #333
 		font-size 14px
 		background white
 
@@ -973,7 +974,7 @@ body
 				color charcoal-grey
 
 @media (min-width: 630px)
-	.am-complete-profile-box
+	.am-profile-box
 		padding 60px 60px !important
 
 
@@ -986,12 +987,13 @@ body
 	padding 100px 20px
 
 	.preview
-		padding 30px 0 10px 0
+		padding 30px 0
 		text-align center
 		position relative
 		a
 			position absolute
 			top 0
+			right 0
 			color #333
 			font-weight: bold;
 			font-size: 1.5em;
