--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -1,4 +1,4 @@
-{% extends '../partials/base.html' %}
+{% extends '../../partials/base.html' %}
 
 
 {% block elements %}
@@ -112,19 +112,4 @@
 
 		</div>
 	</div>
-	<a href="#" id="upload_widget_opener">Upload multiple images</a>
-{% endblock %}
-
-{% block scripts %}
-
-<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-  document.getElementById("upload_widget_opener").addEventListener("click", function() {
-
-    cloudinary.openUploadWidget({ cloud_name: 'demo', upload_preset: 'a5vxnzbp'},
-      function(error, result) { console.log(error, result) });
-
-  }, false);
-</script>
 {% endblock %}
