Revert "add account view"
This reverts commit a515509729e6ce0b6ed1cd14c80fb7b73a111bd

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -879,13 +879,13 @@ body
 
 
 /*------------------------------------*
-	$ PROFILE
+	$ COMPLETE PROFILE
 *------------------------------------*/
-.am-profile
+.am-complete-profile
 	background #eee
 	padding 12px 20px 100px 20px
 
-.am-profile-box
+.am-complete-profile-box
 	background white
 	border solid 1px #979797
 	max-width 580px !important
@@ -907,8 +907,7 @@ body
 		font-family 'Montserrat', sans-serif
 		padding 13px 15px
 		box-sizing border-box
-		// color warm-grey
-		color #333
+		color warm-grey
 		font-size 14px
 		background white
 
@@ -974,7 +973,7 @@ body
 				color charcoal-grey
 
 @media (min-width: 630px)
-	.am-profile-box
+	.am-complete-profile-box
 		padding 60px 60px !important
 
 
@@ -987,13 +986,12 @@ body
 	padding 100px 20px
 
 	.preview
-		padding 30px 0
+		padding 30px 0 10px 0
 		text-align center
 		position relative
 		a
 			position absolute
 			top 0
-			right 0
 			color #333
 			font-weight: bold;
 			font-size: 1.5em;
