--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -2,8 +2,8 @@
 
 
 {% block elements %}
-	<div class="am-profile">
-		<div class="am-profile-box grid-container">
+	<div class="am-complete-profile">
+		<div class="am-complete-profile-box grid-container">
 
 			<div class="grid-100">
 				<p class="title">Elige tu foto de perfil:</p>
