--- a/app/views/user/account/index.html
+++ b/app/views/user/account/index.html
@@ -6,7 +6,7 @@
 		<div class="am-profile-box grid-container">
 
 			<div class="grid-100">
-				<p class="title">Elige tu foto de perfil:</p>
+				<p class="title">Edita tu foto de perfil:</p>
 				<button class="button upload u-margin-top-30">BUSCAR ARCHIVO</button>
 				<p class="title">Nombre como artista</p>
 				<input class="input" type="text" placeholder="Ingresa tu nombre de artista, pseudónimo o alter ego"/>
@@ -104,6 +104,80 @@
 				<div class="interest"><p>Dibujo</p></div>
 				<div class="interest"><p>Esculturas</p></div>
 				<div class="interest"><p>Grabados</p></div>
+			</div>
+
+
+			<div class="grid-100 mobile-grid-100">
+				<p class="title">Correo electronico</p>
+				<input class="input" type="email" placeholder="edita tu correo"/>
+				<p class="title">Password</p>
+				<input class="input" type="email" placeholder="ingresa nuevo password"/>
+				<input class="input u-margin-top-20" type="email" placeholder="repetir nuevo password"/>
+				<p class="title">Direcciones de envios</p>
+
+				<div class="addresses">
+					<div class="address">
+						<!-- <input type="radio" name="address"> -->
+						<div>
+							<p class="address-title">Luis Eduardo Augusto</p>
+							<p class="address-subtitle">460 Lizardo Montero - apt 304</p>
+							<p class="address-subtitle">Lima, Lima 018</p>
+							<p class="address-subtitle">Perú</p>
+							<p class="address-subtitle">Tel:+51944426766</p>
+						</div>
+					</div>
+					<div class="address">
+						<!-- <input type="radio" name="address"> -->
+						<p class="address-title">Agregar nueva dirección de envío</p>
+					</div>
+					<div class="address" style="padding-bottom: 20px;">
+						<div class="grid-container grid-parent" style="width: 100%;">
+							<div class="grid-50">
+								<p class="address-label">Nombres</p>
+								<input class="address-input" placeholder="Ingresa tu Nombre">
+							</div>
+							<div class="grid-50">
+								<p class="address-label">Apellidos</p>
+								<input class="address-input" placeholder="Tus apellidos">
+							</div>
+							<div class="grid-66">
+								<p class="address-label">Dirección de Envío</p>
+								<input class="address-input" placeholder="Dirección Línea 1">
+							</div>
+							<div class="grid-33">
+								<p class="address-label">Int/Apartamento</p>
+								<input class="address-input" placeholder="Nro">
+							</div>
+							<div class="grid-33">
+								<p class="address-label">Ciudad</p>
+								<input class="address-input" placeholder="Ingresa tu ciudad">
+							</div>
+							<div class="grid-33">
+								<p class="address-label">Estado/Provincia</p>
+								<input class="address-input" placeholder="Estado o provincia">
+							</div>
+							<div class="grid-33">
+								<p class="address-label">Código Postal</p>
+								<input class="address-input" placeholder="Nro">
+							</div>
+							<div class="grid-33 suffix-66">
+								<p class="address-label">País</p>
+								<select class="address-input">
+									<option>Seleccionar País</option>
+								</select>
+							</div>
+							<div class="grid-33">
+								<p class="address-label">Teléfono móvil</p>
+								<input class="address-input" placeholder="Ingresa tu número">
+							</div>
+							<div class="grid-66">
+								<p class="address-label">Correo electrónico</p>
+								<input class="address-input" placeholder="Ingresa tu e-mail">
+							</div>
+						</div>
+					</div>
+				</div>
+
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
