--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -22,18 +22,23 @@
 					<span class="line"></span><span class="text">DATOS DE LA OBRA</span><span class="line"></span>
 				</div>
 				<p class="title">Título de la obra</p>
-				<input name='name' class="input" type="text" placeholder="Ingrese el titulo"/>
+				<input name='name' class="input" type="text" placeholder="Ingrese el nombre"/>
 			</div>
 
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Categoría de la obra</p>
 				<select class="input select" name='categoryId'>
-					<option disabled selected style="color: #aaa;">Seleccione categoria</option>
 					{% for category in categories %}
 					<option value="{{category.id}}">{{category.name}}</option>
 					{% endfor %}
 				</select>
 			</div>
+
+			<div class="grid-100 mobile-grid-100">
+				<p class="title">Descripcion de la obra</p>
+				<textarea name='description' class='input' placeholder="Descripcion" maxlength='140'></textarea>
+			</div>
+
 			<div class="grid-100 mobile-grid-100">
 				<p class="title">Tags de la obra</p>
 					<input name='tags' class="input tags" type="text"/>
@@ -80,6 +85,7 @@
 					 name             : $('input[name=name]').val(),
 					 categories    : [parseInt($('select[name=categoryId]').val(),10)],
 					 tags             : $('input[name=tags]').val().split(','),
+					 description             : $('textarea[name=description]').val(),
 					 public:1
 			 };
 
