antes de pulear

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -48,6 +48,8 @@
 	    ]
 	  };
 	</script>
+	<script src="/adapt.min.js"></script>
+
 	<script src="http://code.jquery.com/jquery-2.1.1.min.js" lang="text/javascript"></script>
 	<script src='/app.min.js'></script>
 	<script src="http://imagesloaded.desandro.com/imagesloaded.pkgd.min.js"></script>
