--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -45,6 +45,11 @@
 							<a href="{{user.url}}">
 								<div class="am-Avatar">
 									<img src="{{user.photo}}">&nbsp;<i class="fa fa-caret-down"></i>
+									<div class="user-menu">
+										<div class="user-menu-item">MI PORTAFOLIO</div>
+										<div class="user-menu-item">MI PORTAFOLIO</div>
+										<div class="user-menu-item">MI PORTAFOLIO</div>
+									</div>
 								</div>
 							</a>
 						</li>
