--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -139,12 +139,20 @@ body
 	display flex
 	align-items center
 	cursor pointer
+	position relative
 	img
 		width 50px
 		height 50px
 		border-radius 50%
 	i
 		font-size: 12px;
+	.user-menu
+		position absolute
+		right 0
+		transform translate(0, 50px)
+		background white
+		z-index: 1;
+
 
 .am-Header-icon
 	cursor pointer
@@ -627,7 +635,7 @@ body
 			position absolute
 			bottom 0
 			right 0
-			color rgba(white, .75)
+			color white
 			font-size 1.5rem
 			cursor pointer
 			display none
