headadd hover menu in avatar

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -21,7 +21,7 @@
 				<div class="single-data u-padding-bottom-40">
 					<div class="FollowArtist u-padding-bottom-10">
 						<div>
-							<p class="u-padding-bottom-7 big"><strong>{{work.User.firstname}}</strong></p>
+							<p class="u-padding-bottom-7 big uppercase"><strong>{{work.User.firstname}}</strong></p>
 							<button class="am-Follow-button">+ SEGUIR</button>
 						</div>
 					</div>
