--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -140,6 +140,9 @@ body
 	align-items center
 	cursor pointer
 	position relative
+	&:hover
+		.user-menu
+			display block
 	img
 		width 50px
 		height 50px
@@ -152,6 +155,19 @@ body
 		transform translate(0, 50px)
 		background white
 		z-index: 1;
+		width 200px
+		// border solid 1px #b8b8b8
+		border solid 1px #eee
+		border-radius 4px
+		box-shadow 0 1px 2px 0 rgba(black, .5)
+		display none
+		padding 5px 0
+		&-item
+			font-family 'Montserrat', sans-serif
+			font-size 12px
+			color charcoal-grey
+			padding 15px 25px
+			display block
 
 
 .am-Header-icon
