--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -42,16 +42,25 @@
 							</div>
 						</li>
 						<li class="am-Header-menu-item">
-							<a href="{{user.url}}">
+							<!-- <a href="{{user.url}}"> -->
 								<div class="am-Avatar">
 									<img src="{{user.photo}}">&nbsp;<i class="fa fa-caret-down"></i>
 									<div class="user-menu">
-										<div class="user-menu-item">MI PORTAFOLIO</div>
-										<div class="user-menu-item">MI PORTAFOLIO</div>
-										<div class="user-menu-item">MI PORTAFOLIO</div>
+										<a href="{{user.url}}" class="user-menu-item">MI PORTAFOLIO</a>
+										<div class="u-separator"></div>
+										<div class="user-menu-item">SUBIR MANIFIESTO</div>
+										<div class="user-menu-item">VENDER EN AM</div>
+										<div class="u-separator"></div>
+										<div class="user-menu-item">CARRITO DE COMPRAS</div>
+										<div class="user-menu-item">MIS COMPRAS</div>
+										<div class="user-menu-item">MIS VENTAS</div>
+										<div class="u-separator"></div>
+										<a href="{{user.url}}/account" class="user-menu-item">ADMINISTRAR CUENTA</a>
+										<div class="u-separator"></div>
+										<a href="/auth/logout" class="user-menu-item">SALIR</a>
 									</div>
 								</div>
-							</a>
+							<!-- </a> -->
 						</li>
 					{% else %}
 						<li class="am-Header-menu-item">
