--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -79,20 +79,24 @@
 
 	<script type="text/template" id="template-work">
 		<div class="grid-item">
-			<img src="<%= photo %>">
+			<div class="work-card">
+	  		<div class="featured">AM</div>
+				<img src="<%= photo %>">
+			</div>
 		</div>
 	</script>
 
 	<script type="text/template" id="template-user">
 		<div class="grid-item">
 	  	<div class="artist-card">
+	  		<div class="featured">AM</div>
 				<a href="<%=url%>">
 		  		<div class="artist-card-info">
 		  			<img src="<%=photo%>">
 		  			<div>
 		  				<p class="name uppercase"><%=firstname%></p>
 		  				<p class="city"><%=city%>, <%=country%></p>
-		  				<p class="stats"><i class="fa fa-diamond"></i><%=numOfFollowers%></p>
+		  				<p class="stats"><i class="fa fa-diamond"></i> <%=numOfFollowers%></p>
 		  			</div>
 		  		</div>
 				</a>
@@ -115,6 +119,7 @@
 	<script type="text/template" id="template-product">
 		<div class="grid-item">
 	  	<div class="product-card">
+	  		<div class="featured">AM</div>
 				<div class="product-card-image" style="background-image: url('<%=photo%>')"></div>
 	  		<div class="product-card-data">
 	  			<p><%= name %></p>
