--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -155,19 +155,20 @@ body
 		transform translate(0, 50px)
 		background white
 		z-index: 1;
-		width 200px
-		// border solid 1px #b8b8b8
-		border solid 1px #eee
-		border-radius 4px
-		box-shadow 0 1px 2px 0 rgba(black, .5)
+		width 218px
 		display none
-		padding 5px 0
+		border: solid 1px #ddd;
+		border-radius: 4px;
 		&-item
-			font-family 'Montserrat', sans-serif
-			font-size 12px
-			color charcoal-grey
-			padding 15px 25px
-			display block
+			font-family: 'Montserrat',sans-serif;
+			letter-spacing: 2px;
+			font-weight: bold;
+			// text-transform: uppercase;
+			font-size: 10.5px;
+			// cursor: pointer;
+			color: #3b3d40;
+			display: block;
+			padding: 20px;
 
 
 .am-Header-icon
