--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1098,11 +1098,17 @@ body
 .am-upload-work
 	background rgba(black, .6)
 	padding 100px 20px
-
+	.preload
+		text-align center
+		margin-top 20px
+		i
+			color: #aaa;
+			font-size: 1.25em;
 	.preview
-		padding 30px 0
 		text-align center
 		position relative
+		img
+			margin 30px 0
 		a
 			position absolute
 			top 0
