--- a/app/views/user/work/add.html
+++ b/app/views/user/work/add.html
@@ -10,6 +10,7 @@
 					<span class="line"></span><span class="text">IMAGEN DE LA OBRA</span><span class="line"></span>
 				</div>
 				<div style="position:relative;">
+					<div class="preload"><i class="fa fa-spinner"></i></div>
 					<button class="button upload u-margin-top-30 upload_button">BUSCAR ARCHIVO</button>
 					{{cloudinary.uploader.image_upload_tag('photo', { callback: cloudinary_cors, return_delete_token: true })}}
 				</div>
