--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -66,6 +66,7 @@
 			</header>
 		</div>
 	</div>
+	<div class="u-separator"></div>
 <!-- <li class="am-Header-menu-item">
 						<a class="am-Header-text" href="#">
 							<p>HOME</p>
