--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -840,8 +840,28 @@ body
 	$ REGISTER
 *------------------------------------*/
 .am-register
-	background rgba(black, .59)
+	// background rgba(black, .59)
 	padding 100px 20px
+	background-image: url('/img/background.jpg');
+	background-size: cover;
+	background-position: center center;
+	position relative
+	.message
+		position absolute
+		top 0
+		left 0
+		right 0
+		background rgba(white, .75)
+		padding 20px
+		p
+			font-family: 'Montserrat',sans-serif;
+			font-weight: bold;
+			font-size: 14px;
+			text-align: center;
+		&.succes
+			color: #3bd64a;
+		&.error
+			color: #d0021b;
 
 .am-register-box
 	background white
