refactor collection work

--- a/app/views/auth/signup.html
+++ b/app/views/auth/signup.html
@@ -32,8 +32,7 @@
 			<div class="separator">
 				<span class="line"></span><span class="text">CORREO</span><span class="line"></span>
 			</div>
-			<p class="error">Tu correo o tu contraseña son incorrectas</p>
-			<input class="input" type="text" data-error="true" placeholder="E-mail" value="luis.augusto@artemanifiesto.com"></input>
+			<input class="input" type="text" placeholder="E-mail" value="luis.augusto@artemanifiesto.com"></input>
 			<input class="input u-margin-top-10" type="password" placeholder="Password" value="123456"></input>
 			<button class="button u-margin-top-10" data-color="green">
 				<a>REGISTRARME CON MI CORREO</a>
