--- a/app/views/pages/complete-profile.html
+++ b/app/views/pages/complete-profile.html
@@ -18,7 +18,7 @@
 			</div>
 
 			<div class="grid-50 mobile-grid-100">
-				<p class="link" style="line-height: 46px;">http://artemanifiesto.com/user/</p>
+				<p class="link" style="line-height: 46px;">artemanifiesto.com/user/</p>
 			</div>
 			<div class="grid-50 mobile-grid-100">
 				<input class="input" type="text" placeholder="Ingresa tu usuario"/>
@@ -112,19 +112,7 @@
 
 		</div>
 	</div>
-	<a href="#" id="upload_widget_opener">Upload multiple images</a>
 {% endblock %}
 
 {% block scripts %}
-
-<script src="//widget.cloudinary.com/global/all.js" type="text/javascript"></script>
-
-<script type="text/javascript">
-  document.getElementById("upload_widget_opener").addEventListener("click", function() {
-
-    cloudinary.openUploadWidget({ cloud_name: 'demo', upload_preset: 'a5vxnzbp'},
-      function(error, result) { console.log(error, result) });
-
-  }, false);
-</script>
 {% endblock %}
