--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -260,6 +260,28 @@ body
 .work-card
 	position relative
 
+/*------------------------------------*
+	$ WORK COLLECTION CARD
+*------------------------------------*/
+.work-collection-card
+	border solid 1px #ddd
+	position relative
+	.work-collection-card-img
+		height 275
+	.work-collection-card-data
+		padding 10px
+	.work-collection-card-title
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 11px
+		color #393d3f
+		margin-bottom 5px
+	.work-collection-card-artist
+		font-family: 'PT Serif', serif;
+		font-size 12px
+		color #838c8c
+		font-style italic
+
 
 /*------------------------------------*
 	$ ARTIST CARD
@@ -1107,8 +1129,6 @@ body
 @media (min-width: 630px)
 	.am-profile-box
 		padding 60px 60px !important
-
-
 
 
 
