add featured disabled

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -89,6 +89,7 @@
 	<script type="text/template" id="template-user">
 		<div class="grid-item">
 	  	<div class="artist-card">
+	  		<div class="featured disabled">AM</div>
 				<% if(featured) { %>
 					<div class="featured">AM</div>
 				<% } %>
