--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -143,9 +143,9 @@
 					<p><%=description%></p>
 				</div>
 				<div class="collection-card-images">
-					<div class="collection-card-image" style="background-image: url('/img/works/work10.jpg')"></div>
-					<div class="collection-card-image" style="background-image: url('/img/works/work1.jpg')"></div>
-					<div class="collection-card-image" style="background-image: url('/img/works/work9.jpg')"></div>
+					<% _.each(works, function(work) { %>
+						<div class="collection-card-image" style="background-image: url('<%=work.photo%>')"></div>
+					<% }); %>
 				</div>
 				<div class="collection-card-artist">
 					<div>
