--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -7,7 +7,7 @@
 					<div class="single-image-inner">
 						<img src="{{work.photo}}">
 						<div class="actions u-padding-top-20 u-padding-bottom-20">
-							<div class="action">
+							<div class="action active">
 								<i class="fa fa-diamond valuation"></i>
 								<p>VALORAR</p>
 							</div>
