--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -16,6 +16,14 @@
 								<p>COMPARTIR</p>
 							</div>
 						</div>
+						<div class="actions-box">
+							<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
+							<button class="u-margin-top-10">+ SEGUIR</button>
+						</div>
+						<div class="actions-box u-margin-top-20">
+							<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
+							<button class="color-black bg-gray u-margin-top-10">SIGUIENDO</button>
+						</div>
 					</div>
 				</div>
 				<div class="single-data u-padding-bottom-40">
