add error class in input register

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -957,7 +957,7 @@ body
 		font-size 14px
 		&[data-error="true"]
 			border solid 1px #d0021b
-		.error
+		&.error
 			border solid 1px #d0021b
 
 	.msg
