--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -34,7 +34,7 @@
 			</div>
 
 			<form class='login-form'>
-				<input name='email' class="input" type="email" placeholder="Correo" required></input>
+				<input data-error='true' name='email' class="input" type="email" placeholder="Correo" required></input>
 				<input name='password' class="input u-margin-top-10" type="password" placeholder="Contraseña" required></input>
 				<button class="button u-margin-top-10" data-color="green">
 					<a>INGRESAR A MI CUENTA</a>
