add social boxes

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -22,7 +22,32 @@
 						</div>
 						<div class="actions-box u-margin-top-20">
 							<button class="color-blue bg-gray">AÑADIR A LA COLECCIÓN</button>
-							<button class="color-black bg-gray u-margin-top-10">SIGUIENDO</button>
+							<button class="color-black bg-gray u-margin-top-10"><i class="fa fa-check-circle"></i>&nbsp;SIGUIENDO</button>
+						</div>
+						<div class="actions-box u-margin-top-20">
+							<p class="title">Añadir a las colecciones</p>
+							<div class="u-separator u-margin-top-7"></div>
+							<input class="u-margin-top-10" type="text" placeholder="Crear una colección nueva">
+							<button class="u-margin-top-10 color-black bg-gray wd-auto">AÑADIR</button>
+							<ul class="collections u-margin-top-20">
+								<li class="collection selected">
+									<p>Amazonía Pura</p><i class="fa fa-check"></i>
+								</li>
+								<li class="collection">
+									<p>Mis obras favoritas</p><i class="fa fa-check"></i>
+								</li>
+								<li class="collection">
+									<p>Amazonía Pura</p><i class="fa fa-check"></i>
+								</li>
+								<li class="collection">
+									<p>Mis obras favoritas</p><i class="fa fa-check"></i>
+								</li>
+							</ul>
+							<div class="u-separator u-margin-top-20"></div>
+							<div class="buttons u-margin-top-20">
+								<button class="wd-auto bg-blue color-white">GUARDAR</button>
+								<button class="wd-auto color-black border-black">SALIR</button>
+							</div>
 						</div>
 					</div>
 				</div>
