--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1620,13 +1620,68 @@ body
 		font-size 10px
 		color #9b9b9b
 		letter-spacing 1.5px
-		padding 10px
+		padding 10px 30px
+		display flex
+		align-items center
+		justify-content center
+		cursor pointer
+		border-radius 4px
+		&.border-black
+			border-color #000
+		&.color-white
+			color #fff
 		&.color-blue
 			color #2e71f0
 		&.color-black
 			color #000
+			i
+				color #3bd64a
+				font-size 1.75em
 		&.bg-gray
 			background #eee
+		&.bg-blue
+			background #0000ff
+		&.wd-auto
+			width initial
+	.title
+		font-family 'Montserrat', sans-serif
+		font-weight bold
+		font-size 16px
+		color charcoal-grey
+	input
+		width 100%
+		border solid 1px #979797
+		padding 10px 15px
+		box-sizing border-box
+		font-family 'Montserrat', sans-serif
+		font-size 12px
+		border-radius 4px
+	.collections
+		border-radius 4px
+		border solid 1px #ddd
+		.collection
+			font-family 'Montserrat', sans-serif
+			font-size 14px
+			color #4a4a4a
+			padding 10px 20px
+			display flex
+			cursor pointer
+			p
+				flex 1
+			i
+				color #2e71f0
+				display none
+			&.selected
+				i
+					display block
+			&:not(:first-child)
+				border-top solid 1px #ddd
+
+	.buttons
+		button
+			display inline
+			&:first-child
+				margin-right 20px
 
 
 .more-carousel
