add socials share

--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -49,6 +49,16 @@
 								<button class="wd-auto color-black border-black">SALIR</button>
 							</div>
 						</div>
+						<div class="actions-box u-margin-top-20">
+							<p class="title">Compartir obras</p>
+							<div class="u-separator u-margin-top-7"></div>
+							<div class="share">
+								<i class="fa fa-facebook"></i>Compartir en facebook
+							</div>
+							<div class="share">
+								<i class="fa fa-twitter"></i>Compartir en twitter
+							</div>
+						</div>
 					</div>
 				</div>
 				<div class="single-data u-padding-bottom-40">
