--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1682,7 +1682,24 @@ body
 			display inline
 			&:first-child
 				margin-right 20px
-
+	.share
+		font-family 'Montserrat', sans-serif
+		font-size 14px
+		color #4a4a4a
+		display flex
+		align-items center
+		margin-top 10px
+		cursor pointer
+		i
+			width 40px
+			height 40px
+			background black
+			color white
+			font-size 2em
+			display flex
+			align-items center
+			justify-content center
+			margin-right 15px
 
 .more-carousel
 	height: 240px;
