--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -2,6 +2,7 @@
 
 {% set path = 'discover-works' %}
 
+
 {% block elements %}
 
 {% set bannerTitle = 'Descubre obras y creaciones' %}
@@ -57,6 +58,7 @@
 <div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40" data-state="expand">
 	<div class="grid-100 grid-parent">
 		<div class="grid work-layout-discover">
+			<div class="grid-sizer"></div>
 		</div>
 	</div>
 </div>
