--- a/app/views/user/work/index.html
+++ b/app/views/user/work/index.html
@@ -78,6 +78,18 @@
 					<div class="info-box u-margin-top-25">
 						<div class="header">
 							<p class="selected">ORIGINAL</p>
+							<!-- <p>PRODUCTOS</p> -->
+						</div>
+						<div class="body u-text-center">
+							<p class="title large">Puedes preguntar al artista la disponibilidad</p>
+							<!-- <p class="price u-padding-top-10">S/. <strong class="large">1500</strong></p> -->
+							<button class="am-View-button expand u-margin-top-20">PREGUNTAR PRECIO</button>
+							<p class="msg u-padding-top-15 u-padding-bottom-4">Muy pronto la tienda en línea</p>
+						</div>
+					</div>
+					<div class="info-box u-margin-top-25">
+						<div class="header">
+							<p class="selected">ORIGINAL</p>
 							<p>PRODUCTOS</p>
 						</div>
 						<div class="body u-text-center">
