--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -57,6 +57,7 @@
 <div class="discover-content grid-container u-padding-top-10 u-padding-bottom-40" data-state="expand">
 	<div class="grid-100 grid-parent">
 		<div class="grid work-layout-discover">
+			<div class="grid-sizer"></div>
 		</div>
 	</div>
 </div>
