--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -871,6 +871,10 @@ body
 	background-size: cover;
 	background-position: center center;
 	position relative
+	.g-recaptcha
+		display table
+		margin-left auto
+		margin-right auto
 	.message
 		position absolute
 		top 0
