--- a/app/views/pages/confirm-email.html
+++ b/app/views/pages/confirm-email.html
@@ -3,14 +3,14 @@
 
 {% block elements %}
 	<div class="am-welcome">
-		<div class="cover" style="background-image: url(img/banners/welcome.png)"></div>
+		<div class="cover" style="background-image: url(/img/banners/welcome.png)"></div>
 		<div class="am-welcome-box">
-			<img class="logo-img" src="img/logo-img.svg">
-			<img class="logo-text" src="img/logo-text.svg">
+			<img class="logo-img" src="/img/logo-img.svg">
+			<img class="logo-text" src="/img/logo-text.svg">
 			<p class="title">¡Felicitaciones!</p>
 			<p class="title">Bienvenido a la comunidad de Arte Manifiesto</p>
 			<p class="subtitle">Te hemos enviado un correo a <span>{{user.email}}</span></p>
-			<p class="msg">Por favor revisa tu correo para continuar.</p>
+			<p class="msg">Por favor confirma tu correo para continuar.</p>
 		</div>
 		<div class="am-welcome-help">
 			<div class="title">
